--- a/hotel_reservation_teacher/mainsite/templates/layout/layout.html
+++ b/hotel_reservation_teacher/mainsite/templates/layout/layout.html
@@ -30,7 +30,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">About</a>
@@ -43,14 +43,14 @@
                     <a class="nav-link" href="#">mypage</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">logout</a>
+                    <a class="nav-link" href="{% url 'logout' %}">logout</a>
                 </li>
                 {% else %}
                 <li class="nav-item">
-                    <a class="nav-link" href="#">sign in</a>
+                    <a class="nav-link" href="{% url 'sign_in' %}">sign in</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">sign up</a>
+                    <a class="nav-link" href="{% url 'sign_up' %}">sign up</a>
                 </li>
                 {% endif %}
         </div>
