--- a/hotel_reservation_teacher/reservation/templates/reservation/reservation.html
+++ b/hotel_reservation_teacher/reservation/templates/reservation/reservation.html
@@ -14,16 +14,18 @@
             <h6 class="card-subtitle mb-2 text-muted">Please write your infomation</h6>
             <p class="card-text">
 
-            <form id="buttonSubmit" action="{% url 'sign_in' %}" method="POST">
+            <form id="buttonSubmit" action="{% url 'reservation' %}" method="POST">
                 {% csrf_token %}
                 <div class="form-group">
                     <label for="Inputstartdate">Reservation</label>
-                    <input type="date" name="start_date" class="form-control" id="Inputstartdate" required>
-                    <input type="date" name="end_date" class="form-control" id="Inputenddate" required>
+                    <input type="date" name="start_day" class="form-control" id="Inputstartdate" required>
+                    <input type="date" name="end_day" class="form-control" id="Inputenddate" required>
                 </div>
                 <div class="form-group">
-                    <label for="Inputpassword">Password</label>
-                    <input type="password" name="password" class="form-control" id="Inputpassword" required>
+                    <label for="Input_num1">Adult</label>
+                    <input type="number" name="adult" value="2" class="form-control" id="Input_num1" required>
+                    <label for="Input_num1">Child</label>
+                    <input type="number" name="child" value="0" class="form-control" id="Input_num1" required>
                 </div>
                 <button id="bt-type" type="submit" onclick="check_require()" class="btn btn-primary">Submit</button>
             </form>
