--- a/hotel_reservation_teacher/mainsite/templates/layout/layout.html
+++ b/hotel_reservation_teacher/mainsite/templates/layout/layout.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="z-index: 3;">
         <a class="navbar-brand" href="#">Hotel Reservation</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,7 +34,7 @@
                     <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="{% url 'about' %}">About</a>
                 </li>
                 {% if request.session.user %}
                 <li class="nav-item">
@@ -60,6 +60,8 @@
     {% block content1 %}{% endblock %}
     {% block content2 %}{% endblock %}
     {% block content3 %}{% endblock %}
+
+<script src="{%static 'js/scroll.js'%}"></script>
 </body>
 
 </html>
