--- a/hotel_reservation_teacher/mainsite/templates/layout/layout.html
+++ b/hotel_reservation_teacher/mainsite/templates/layout/layout.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/home.css' %}">
+    <link rel="stylesheet" href="{% static 'css/layout.css' %}">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
@@ -22,7 +23,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light" style="z-index: 3;">
-        <a class="navbar-brand" href="#">Hotel Reservation</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Hotel Teacher</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -41,7 +42,7 @@
                     <a class="nav-link" href="{% url 'reservation' %}">Reservation</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">mypage</a>
+                    <a class="nav-link" href="{% url 'mypage' %}">mypage</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'logout' %}">logout</a>
@@ -61,6 +62,12 @@
     {% block content2 %}{% endblock %}
     {% block content3 %}{% endblock %}
 
+
+    <footer>
+        <div class="foot row mx-0 justify-content-center p-0 bg-dark text-white">
+            <div class="col p-0"></div>
+        </div>
+    </footer>
 <script src="{%static 'js/scroll.js'%}"></script>
 </body>
 
