--- a/hotel_reservation_teacher/mainsite/static/css/layout.css
+++ b/hotel_reservation_teacher/mainsite/static/css/layout.css
@@ -3,3 +3,7 @@
     margin-top: 200px;
     width: 100%;
 }
+
+.navbar{
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
