--- a/hotel_reservation_teacher/reservation/templates/reservation/reservation.html
+++ b/hotel_reservation_teacher/reservation/templates/reservation/reservation.html
@@ -17,8 +17,9 @@
             <form id="buttonSubmit" action="{% url 'reservation' %}" method="POST">
                 {% csrf_token %}
                 <div class="form-group">
-                    <label for="Inputstartdate">Reservation</label>
+                    <label for="Inputstartdate">Check In</label>
                     <input type="date" name="start_day" class="form-control" id="Inputstartdate" required>
+                    <label for="Inputenddate">Check Out</label>
                     <input type="date" name="end_day" class="form-control" id="Inputenddate" required>
                 </div>
                 <div class="form-group">
